First go at swagger - still need to build model

--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Node database tutorial</title>
+  <title>Third-party Database</title>
 </head>
 <body>
-  <form class="CreateUser">
-    <h1>Create a new user</h1>
-    <input type="text" class="username" placeholder="username">
-    <input type="password" class="password" placeholder="password">
-    <input type="submit" value="Create user">
-  </form>
-  <script src="/app.js"></script>
+<h1>try <a href="/api-docs/v1">looking at the docs</a>.</h1>
 </body>
 </html>
