Add basic Swagger routes

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,6 @@
   <title>Third-party Database</title>
 </head>
 <body>
-<h1>try <a href="/api-docs/v1">looking at the docs</a>.</h1>
+<h1>try <a href="/api-docs/v1">looking at the docs</a></h1>
 </body>
 </html>
