--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,51 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Third-party Database</title>
-</head>
-<body>
-<h1>try <a href="/api-docs/v1">looking at the docs</a></h1>
-</body>
+    <head>
+        <title>Third-party Request Database</title>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link rel="stylesheet" href="css/main.css"/>
+        <script src="js/main.js" defer></script>
+    </head>
+    <body>
+        <div id="container">
+            <div id="header">
+                <h1>Third-party Request Database</h1>
+                <h3>An API end-point to categorise and classify third-party content. <a href="/api-docs/v1">View the docs</a>.</h3>
+            </div>
+            <div id="form">
+                <form id="submission-form">
+                    <div class="form-group">
+                        <input type="url" id="search-domain" name="search-domain" class="mid"/>
+                        <button type="button" id="search-domain-button">Search for domain</button>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" name="search-filename" id="search-filename" class="mid"/>
+                        <button type="button" id="search-filename-button">Search for filename</button>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" name="search-free" id="search-free" class="mid"/>
+                        <button type="button" id="search-free-button">Search for text</button>
+                    </div>
+                </form>
+                <div id="query-url">
+                  ...
+                </div>
+                <div id="status" class="info">
+                  Try running a query up above.
+                </div>
+            <div id="footer">
+                Made by <a href="https://twitter.com/simonhearne">Simon</a> • Fork on <a href="https://github.com/simonhearne/thirdpartydb">GitHub</a>
+            </div>
+        </div>
+        <script>
+            window.onload = () => {
+              document.getElementById("search-domain-button").addEventListener('click', searchDomain);
+              document.getElementById("search-filename-button").addEventListener('click', searchFilename);
+              document.getElementById("search-free-button").addEventListener('click', searchFree);
+            }
+        </script>
+    </body>
 </html>
