--- a/public/index.html
+++ b/public/index.html
@@ -13,20 +13,20 @@
         <div id="container">
             <div id="header">
                 <h1>Third-party Request Database</h1>
-                <h3>An API end-point to categorise and classify third-party content. <a href="/api-docs/v1">View the docs</a>.</h3>
+                <h3>An API to categorize and classify third-party content. <a href="/api-docs/v1">View the docs</a> or try it out below</h3>
             </div>
             <div id="form">
                 <form id="submission-form">
                     <div class="form-group">
-                        <input type="url" id="search-domain" name="search-domain" class="mid"/>
-                        <button type="button" id="search-domain-button">Search for domain</button>
+                        <input placeholder="www.google-analytics.com" type="url" id="search-domain" name="search-domain" class="mid"/>
+                        <button type="button" id="search-domain-button">Lookup domain</button>
                     </div>
                     <div class="form-group">
-                        <input type="text" name="search-filename" id="search-filename" class="mid"/>
-                        <button type="button" id="search-filename-button">Search for filename</button>
+                        <input placeholder="https://www.google-analytics.com/analytics.js" type="text" name="search-filename" id="search-filename" class="mid"/>
+                        <button type="button" id="search-filename-button">Search by URL</button>
                     </div>
                     <div class="form-group">
-                        <input type="text" name="search-free" id="search-free" class="mid"/>
+                        <input placeholder="analytics" type="text" name="search-free" id="search-free" class="mid"/>
                         <button type="button" id="search-free-button">Search for text</button>
                     </div>
                 </form>
